--- a/.gitignore
+++ b/.gitignore
@@ -195,7 +195,7 @@ ClientBin/
 *.publishsettings
 node_modules/
 orleans.codegen.cs
-dist/
+wwwroot/dist/
 
 # Since there are multiple workflows, uncomment next line to ignore bower_components
 # (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
@@ -261,3 +261,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Semantic/wwwroot/dist
